// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-bundle-type 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "document",
      "definition": "The bundle is a document. The first resource is a Composition.",
      "display": "Document",
      "enum": "DOCUMENT",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "message",
      "definition": "The bundle is a message. The first resource is a MessageHeader.",
      "display": "Message",
      "enum": "MESSAGE",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "transaction",
      "definition": "The bundle is a transaction - intended to be processed by a server as an atomic commit.",
      "display": "Transaction",
      "enum": "TRANSACTION",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "transaction-response",
      "definition": "The bundle is a transaction response. Because the response is a transaction response, the transaction has succeeded, and all responses are error free.",
      "display": "Transaction Response",
      "enum": "TRANSACTION_RESPONSE",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "batch",
      "definition": "The bundle is a set of actions - intended to be processed by a server as a group of independent actions.",
      "display": "Batch",
      "enum": "BATCH",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "batch-response",
      "definition": "The bundle is a batch response. Note that as a batch, some responses may indicate failure and others success.",
      "display": "Batch Response",
      "enum": "BATCH_RESPONSE",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "history",
      "definition": "The bundle is a list of resources from a history interaction on a server.",
      "display": "History List",
      "enum": "HISTORY",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "searchset",
      "definition": "The bundle is a list of resources returned as a result of a search/query interaction, operation, or message.",
      "display": "Search Results",
      "enum": "SEARCHSET",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
    {
      "code": "collection",
      "definition": "The bundle is a set of resources collected into a single package for ease of distribution that imposes no processing obligations or behavioral rules beyond persistence.",
      "display": "Collection",
      "enum": "COLLECTION",
      "name": "BundleType",
      "url": "http://hl7.org/fhir/bundle-type",
    },
  ],
  "description": "Indicates the purpose of a bundle - how it is intended to be used.",
  "name": "BundleType",
  "url": "http://hl7.org/fhir/bundle-type",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-contact-point-system 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "phone",
      "definition": "The value is a telephone number used for voice calls. Use of full international numbers starting with + is recommended to enable automatic dialing support but not required.",
      "display": "Phone",
      "enum": "PHONE",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
    {
      "code": "fax",
      "definition": "The value is a fax machine. Use of full international numbers starting with + is recommended to enable automatic dialing support but not required.",
      "display": "Fax",
      "enum": "FAX",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
    {
      "code": "email",
      "definition": "The value is an email address.",
      "display": "Email",
      "enum": "EMAIL",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
    {
      "code": "pager",
      "definition": "The value is a pager number. These may be local pager numbers that are only usable on a particular pager system.",
      "display": "Pager",
      "enum": "PAGER",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
    {
      "code": "url",
      "definition": "A contact that is not a phone, fax, pager or email address and is expressed as a URL.  This is intended for various institutional or personal contacts including web sites, blogs, Skype, Twitter, Facebook, etc. Do not use for email addresses.",
      "display": "URL",
      "enum": "URL",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
    {
      "code": "sms",
      "definition": "A contact that can be used for sending an sms message (e.g. mobile phones, some landlines).",
      "display": "SMS",
      "enum": "SMS",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
    {
      "code": "other",
      "definition": "A contact that is not a phone, fax, page or email address and is not expressible as a URL.  E.g. Internal mail address.  This SHOULD NOT be used for contacts that are expressible as a URL (e.g. Skype, Twitter, Facebook, etc.)  Extensions may be used to distinguish "other" contact types.",
      "display": "Other",
      "enum": "OTHER",
      "name": "ContactPointSystem",
      "url": "http://hl7.org/fhir/contact-point-system",
    },
  ],
  "description": "Telecommunications form for contact point.",
  "name": "ContactPointSystem",
  "url": "http://hl7.org/fhir/contact-point-system",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-contact-point-use 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "home",
      "definition": "A communication contact point at a home; attempted contacts for business purposes might intrude privacy and chances are one will contact family or other household members instead of the person one wishes to call. Typically used with urgent cases, or if no other contacts are available.",
      "display": "Home",
      "enum": "HOME",
      "name": "ContactPointUse",
      "url": "http://hl7.org/fhir/contact-point-use",
    },
    {
      "code": "work",
      "definition": "An office contact point. First choice for business related contacts during business hours.",
      "display": "Work",
      "enum": "WORK",
      "name": "ContactPointUse",
      "url": "http://hl7.org/fhir/contact-point-use",
    },
    {
      "code": "temp",
      "definition": "A temporary contact point. The period can provide more detailed information.",
      "display": "Temp",
      "enum": "TEMP",
      "name": "ContactPointUse",
      "url": "http://hl7.org/fhir/contact-point-use",
    },
    {
      "code": "old",
      "definition": "This contact point is no longer in use (or was never correct, but retained for records).",
      "display": "Old",
      "enum": "OLD",
      "name": "ContactPointUse",
      "url": "http://hl7.org/fhir/contact-point-use",
    },
    {
      "code": "mobile",
      "definition": "A telecommunication device that moves and stays with its owner. May have characteristics of all other use codes, suitable for urgent matters, not the first choice for routine business.",
      "display": "Mobile",
      "enum": "MOBILE",
      "name": "ContactPointUse",
      "url": "http://hl7.org/fhir/contact-point-use",
    },
  ],
  "description": "Use of contact point.",
  "name": "ContactPointUse",
  "url": "http://hl7.org/fhir/contact-point-use",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-days-of-week 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "mon",
      "definition": "Monday.",
      "display": "Monday",
      "enum": "MON",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
    {
      "code": "tue",
      "definition": "Tuesday.",
      "display": "Tuesday",
      "enum": "TUE",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
    {
      "code": "wed",
      "definition": "Wednesday.",
      "display": "Wednesday",
      "enum": "WED",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
    {
      "code": "thu",
      "definition": "Thursday.",
      "display": "Thursday",
      "enum": "THU",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
    {
      "code": "fri",
      "definition": "Friday.",
      "display": "Friday",
      "enum": "FRI",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
    {
      "code": "sat",
      "definition": "Saturday.",
      "display": "Saturday",
      "enum": "SAT",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
    {
      "code": "sun",
      "definition": "Sunday.",
      "display": "Sunday",
      "enum": "SUN",
      "name": "DaysOfWeek",
      "url": "http://hl7.org/fhir/days-of-week",
    },
  ],
  "description": "The days of the week.",
  "name": "DaysOfWeek",
  "url": "http://hl7.org/fhir/days-of-week",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-http-verb 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "GET",
      "definition": "HTTP GET Command.",
      "display": "GET",
      "enum": "GET",
      "name": "HttpVerb",
      "url": "http://hl7.org/fhir/http-verb",
    },
    {
      "code": "HEAD",
      "definition": "HTTP HEAD Command.",
      "display": "HEAD",
      "enum": "HEAD",
      "name": "HttpVerb",
      "url": "http://hl7.org/fhir/http-verb",
    },
    {
      "code": "POST",
      "definition": "HTTP POST Command.",
      "display": "POST",
      "enum": "POST",
      "name": "HttpVerb",
      "url": "http://hl7.org/fhir/http-verb",
    },
    {
      "code": "PUT",
      "definition": "HTTP PUT Command.",
      "display": "PUT",
      "enum": "PUT",
      "name": "HttpVerb",
      "url": "http://hl7.org/fhir/http-verb",
    },
    {
      "code": "DELETE",
      "definition": "HTTP DELETE Command.",
      "display": "DELETE",
      "enum": "DELETE",
      "name": "HttpVerb",
      "url": "http://hl7.org/fhir/http-verb",
    },
    {
      "code": "PATCH",
      "definition": "HTTP PATCH Command.",
      "display": "PATCH",
      "enum": "PATCH",
      "name": "HttpVerb",
      "url": "http://hl7.org/fhir/http-verb",
    },
  ],
  "description": "HTTP verbs (in the HTTP command line). See [HTTP rfc](https://tools.ietf.org/html/rfc7231) for details.",
  "name": "HttpVerb",
  "url": "http://hl7.org/fhir/http-verb",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-iana-link-relations 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "about",
      "definition": "Refers to a resource that is the subject of the link\\'s context.",
      "display": "Refers to a resource that is the subject of the link\\'s context.",
      "enum": "ABOUT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "acl",
      "definition": "Asserts that the link target provides an access control description for the link context.",
      "display": "Asserts that the link target provides an access control description for the link context.",
      "enum": "ACL",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "alternate",
      "definition": "Refers to a substitute for this context",
      "display": "Refers to a substitute for this context",
      "enum": "ALTERNATE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "amphtml",
      "definition": "Used to reference alternative content that uses the AMP profile of the HTML format.",
      "display": "Used to reference alternative content that uses the AMP profile of the HTML format.",
      "enum": "AMPHTML",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "appendix",
      "definition": "Refers to an appendix.",
      "display": "Refers to an appendix.",
      "enum": "APPENDIX",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "apple-touch-icon",
      "definition": "Refers to an icon for the context. Synonym for icon.",
      "display": "Refers to an icon for the context. Synonym for icon.",
      "enum": "APPLE_TOUCH_ICON",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "apple-touch-startup-image",
      "definition": "Refers to a launch screen for the context.",
      "display": "Refers to a launch screen for the context.",
      "enum": "APPLE_TOUCH_STARTUP_IMAGE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "archives",
      "definition": "Refers to a collection of records, documents, or other       materials of historical interest.",
      "display": "Refers to a collection of records, documents, or other       materials of historical interest.",
      "enum": "ARCHIVES",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "author",
      "definition": "Refers to the context\\'s author.",
      "display": "Refers to the context\\'s author.",
      "enum": "AUTHOR",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "blocked-by",
      "definition": "Identifies the entity that blocks access to a resource       following receipt of a legal demand.",
      "display": "Identifies the entity that blocks access to a resource       following receipt of a legal demand.",
      "enum": "BLOCKED_BY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "bookmark",
      "definition": "Gives a permanent link to use for bookmarking purposes.",
      "display": "Gives a permanent link to use for bookmarking purposes.",
      "enum": "BOOKMARK",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "canonical",
      "definition": "Designates the preferred version of a resource (the IRI and its contents).",
      "display": "Designates the preferred version of a resource (the IRI and its contents).",
      "enum": "CANONICAL",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "chapter",
      "definition": "Refers to a chapter in a collection of resources.",
      "display": "Refers to a chapter in a collection of resources.",
      "enum": "CHAPTER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "cite-as",
      "definition": "Indicates that the link target is preferred over the link context for the purpose of permanent citation.",
      "display": "Indicates that the link target is preferred over the link context for the purpose of permanent citation.",
      "enum": "CITE_AS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "collection",
      "definition": "The target IRI points to a resource which represents the collection resource for the context IRI.",
      "display": "The target IRI points to a resource which represents the collection resource for the context IRI.",
      "enum": "COLLECTION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "contents",
      "definition": "Refers to a table of contents.",
      "display": "Refers to a table of contents.",
      "enum": "CONTENTS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "convertedFrom",
      "definition": "The document linked to was later converted to the       document that contains this link relation.  For example, an RFC can       have a link to the Internet-Draft that became the RFC; in that case,       the link relation would be "convertedFrom".",
      "display": "The document linked to was later converted to the       document that contains this link relation.  For example, an RFC can       have a link to the Internet-Draft that became the RFC; in that case,       the link relation would be "convertedFrom".",
      "enum": "CONVERTED_FROM",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "copyright",
      "definition": "Refers to a copyright statement that applies to the     link\\'s context.",
      "display": "Refers to a copyright statement that applies to the     link\\'s context.",
      "enum": "COPYRIGHT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "create-form",
      "definition": "The target IRI points to a resource where a submission form can be obtained.",
      "display": "The target IRI points to a resource where a submission form can be obtained.",
      "enum": "CREATE_FORM",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "current",
      "definition": "Refers to a resource containing the most recent       item(s) in a collection of resources.",
      "display": "Refers to a resource containing the most recent       item(s) in a collection of resources.",
      "enum": "CURRENT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "describedby",
      "definition": "Refers to a resource providing information about the       link\\'s context.",
      "display": "Refers to a resource providing information about the       link\\'s context.",
      "enum": "DESCRIBEDBY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "describes",
      "definition": "The relationship A \\'describes\\' B asserts that       resource A provides a description of resource B. There are no       constraints on the format or representation of either A or B,       neither are there any further constraints on either resource.",
      "display": "The relationship A \\'describes\\' B asserts that       resource A provides a description of resource B. There are no       constraints on the format or representation of either A or B,       neither are there any further constraints on either resource.",
      "enum": "DESCRIBES",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "disclosure",
      "definition": "Refers to a list of patent disclosures made with respect to        material for which \\'disclosure\\' relation is specified.",
      "display": "Refers to a list of patent disclosures made with respect to        material for which \\'disclosure\\' relation is specified.",
      "enum": "DISCLOSURE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "dns-prefetch",
      "definition": "Used to indicate an origin that will be used to fetch required        resources for the link context, and that the user agent ought to resolve        as early as possible.",
      "display": "Used to indicate an origin that will be used to fetch required        resources for the link context, and that the user agent ought to resolve        as early as possible.",
      "enum": "DNS_PREFETCH",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "duplicate",
      "definition": "Refers to a resource whose available representations       are byte-for-byte identical with the corresponding representations of       the context IRI.",
      "display": "Refers to a resource whose available representations       are byte-for-byte identical with the corresponding representations of       the context IRI.",
      "enum": "DUPLICATE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "edit",
      "definition": "Refers to a resource that can be used to edit the       link\\'s context.",
      "display": "Refers to a resource that can be used to edit the       link\\'s context.",
      "enum": "EDIT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "edit-form",
      "definition": "The target IRI points to a resource where a submission form for       editing associated resource can be obtained.",
      "display": "The target IRI points to a resource where a submission form for       editing associated resource can be obtained.",
      "enum": "EDIT_FORM",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "edit-media",
      "definition": "Refers to a resource that can be used to edit media       associated with the link\\'s context.",
      "display": "Refers to a resource that can be used to edit media       associated with the link\\'s context.",
      "enum": "EDIT_MEDIA",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "enclosure",
      "definition": "Identifies a related resource that is potentially       large and might require special handling.",
      "display": "Identifies a related resource that is potentially       large and might require special handling.",
      "enum": "ENCLOSURE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "external",
      "definition": "Refers to a resource that is not part of the same site as the current context.",
      "display": "Refers to a resource that is not part of the same site as the current context.",
      "enum": "EXTERNAL",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "first",
      "definition": "An IRI that refers to the furthest preceding resource     in a series of resources.",
      "display": "An IRI that refers to the furthest preceding resource     in a series of resources.",
      "enum": "FIRST",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "glossary",
      "definition": "Refers to a glossary of terms.",
      "display": "Refers to a glossary of terms.",
      "enum": "GLOSSARY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "help",
      "definition": "Refers to context-sensitive help.",
      "display": "Refers to context-sensitive help.",
      "enum": "HELP",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "hosts",
      "definition": "Refers to a resource hosted by the server indicated by       the link context.",
      "display": "Refers to a resource hosted by the server indicated by       the link context.",
      "enum": "HOSTS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "hub",
      "definition": "Refers to a hub that enables registration for     notification of updates to the context.",
      "display": "Refers to a hub that enables registration for     notification of updates to the context.",
      "enum": "HUB",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "icon",
      "definition": "Refers to an icon representing the link\\'s context.",
      "display": "Refers to an icon representing the link\\'s context.",
      "enum": "ICON",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "index",
      "definition": "Refers to an index.",
      "display": "Refers to an index.",
      "enum": "INDEX",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalAfter",
      "definition": "refers to a resource associated with a time interval that ends before the beginning of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that ends before the beginning of the time interval associated with the context resource",
      "enum": "INTERVAL_AFTER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalBefore",
      "definition": "refers to a resource associated with a time interval that begins after the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins after the end of the time interval associated with the context resource",
      "enum": "INTERVAL_BEFORE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalContains",
      "definition": "refers to a resource associated with a time interval that begins after the beginning of the time interval associated with the context resource, and ends before the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins after the beginning of the time interval associated with the context resource, and ends before the end of the time interval associated with the context resource",
      "enum": "INTERVAL_CONTAINS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalDisjoint",
      "definition": "refers to a resource associated with a time interval that begins after the end of the time interval associated with the context resource, or ends before the beginning of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins after the end of the time interval associated with the context resource, or ends before the beginning of the time interval associated with the context resource",
      "enum": "INTERVAL_DISJOINT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalDuring",
      "definition": "refers to a resource associated with a time interval that begins before the beginning of the time interval associated with the context resource, and ends after the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins before the beginning of the time interval associated with the context resource, and ends after the end of the time interval associated with the context resource",
      "enum": "INTERVAL_DURING",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalEquals",
      "definition": "refers to a resource associated with a time interval whose beginning coincides with the beginning of the time interval associated with the context resource, and whose end coincides with the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval whose beginning coincides with the beginning of the time interval associated with the context resource, and whose end coincides with the end of the time interval associated with the context resource",
      "enum": "INTERVAL_EQUALS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalFinishedBy",
      "definition": "refers to a resource associated with a time interval that begins after the beginning of the time interval associated with the context resource, and whose end coincides with the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins after the beginning of the time interval associated with the context resource, and whose end coincides with the end of the time interval associated with the context resource",
      "enum": "INTERVAL_FINISHED_BY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalFinishes",
      "definition": "refers to a resource associated with a time interval that begins before the beginning of the time interval associated with the context resource, and whose end coincides with the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins before the beginning of the time interval associated with the context resource, and whose end coincides with the end of the time interval associated with the context resource",
      "enum": "INTERVAL_FINISHES",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalIn",
      "definition": "refers to a resource associated with a time interval that begins before or is coincident with the beginning of the time interval associated with the context resource, and ends after or is coincident with the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins before or is coincident with the beginning of the time interval associated with the context resource, and ends after or is coincident with the end of the time interval associated with the context resource",
      "enum": "INTERVAL_IN",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalMeets",
      "definition": "refers to a resource associated with a time interval whose beginning coincides with the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval whose beginning coincides with the end of the time interval associated with the context resource",
      "enum": "INTERVAL_MEETS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalMetBy",
      "definition": "refers to a resource associated with a time interval whose end coincides with the beginning of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval whose end coincides with the beginning of the time interval associated with the context resource",
      "enum": "INTERVAL_MET_BY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalOverlappedBy",
      "definition": "refers to a resource associated with a time interval that begins before the beginning of the time interval associated with the context resource, and ends after the beginning of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins before the beginning of the time interval associated with the context resource, and ends after the beginning of the time interval associated with the context resource",
      "enum": "INTERVAL_OVERLAPPED_BY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalOverlaps",
      "definition": "refers to a resource associated with a time interval that begins before the end of the time interval associated with the context resource, and ends after the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval that begins before the end of the time interval associated with the context resource, and ends after the end of the time interval associated with the context resource",
      "enum": "INTERVAL_OVERLAPS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalStartedBy",
      "definition": "refers to a resource associated with a time interval whose beginning coincides with the beginning of the time interval associated with the context resource, and ends before the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval whose beginning coincides with the beginning of the time interval associated with the context resource, and ends before the end of the time interval associated with the context resource",
      "enum": "INTERVAL_STARTED_BY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "intervalStarts",
      "definition": "refers to a resource associated with a time interval whose beginning coincides with the beginning of the time interval associated with the context resource, and ends after the end of the time interval associated with the context resource",
      "display": "refers to a resource associated with a time interval whose beginning coincides with the beginning of the time interval associated with the context resource, and ends after the end of the time interval associated with the context resource",
      "enum": "INTERVAL_STARTS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "item",
      "definition": "The target IRI points to a resource that is a member of the collection represented by the context IRI.",
      "display": "The target IRI points to a resource that is a member of the collection represented by the context IRI.",
      "enum": "ITEM",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "last",
      "definition": "An IRI that refers to the furthest following resource       in a series of resources.",
      "display": "An IRI that refers to the furthest following resource       in a series of resources.",
      "enum": "LAST",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "latest-version",
      "definition": "Points to a resource containing the latest (e.g.,       current) version of the context.",
      "display": "Points to a resource containing the latest (e.g.,       current) version of the context.",
      "enum": "LATEST_VERSION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "license",
      "definition": "Refers to a license associated with this context.",
      "display": "Refers to a license associated with this context.",
      "enum": "LICENSE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "linkset",
      "definition": "The link target of a link with the "linkset" relation       type provides a set of links, including links in which the link       context of the link participates.     ",
      "display": "The link target of a link with the "linkset" relation       type provides a set of links, including links in which the link       context of the link participates.     ",
      "enum": "LINKSET",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "lrdd",
      "definition": "Refers to further information about the link\\'s context,       expressed as a LRDD ("Link-based Resource Descriptor Document")       resource.  See  for information about       processing this relation type in host-meta documents. When used       elsewhere, it refers to additional links and other metadata.       Multiple instances indicate additional LRDD resources. LRDD       resources MUST have an "application/xrd+xml" representation, and       MAY have others.",
      "display": "Refers to further information about the link\\'s context,       expressed as a LRDD ("Link-based Resource Descriptor Document")       resource.  See  for information about       processing this relation type in host-meta documents. When used       elsewhere, it refers to additional links and other metadata.       Multiple instances indicate additional LRDD resources. LRDD       resources MUST have an "application/xrd+xml" representation, and       MAY have others.",
      "enum": "LRDD",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "manifest",
      "definition": "Links to a manifest file for the context.",
      "display": "Links to a manifest file for the context.",
      "enum": "MANIFEST",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "mask-icon",
      "definition": "Refers to a mask that can be applied to the icon for the context.",
      "display": "Refers to a mask that can be applied to the icon for the context.",
      "enum": "MASK_ICON",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "media-feed",
      "definition": "Refers to a feed of personalised media recommendations relevant to the link context.",
      "display": "Refers to a feed of personalised media recommendations relevant to the link context.",
      "enum": "MEDIA_FEED",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "memento",
      "definition": "The Target IRI points to a Memento, a fixed resource that will not change state anymore.",
      "display": "The Target IRI points to a Memento, a fixed resource that will not change state anymore.",
      "enum": "MEMENTO",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "micropub",
      "definition": "Links to the context\\'s Micropub endpoint.",
      "display": "Links to the context\\'s Micropub endpoint.",
      "enum": "MICROPUB",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "modulepreload",
      "definition": "Refers to a module that the user agent is to preemptively fetch and store for use in the current context.",
      "display": "Refers to a module that the user agent is to preemptively fetch and store for use in the current context.",
      "enum": "MODULEPRELOAD",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "monitor",
      "definition": "Refers to a resource that can be used to monitor changes in an HTTP resource.     ",
      "display": "Refers to a resource that can be used to monitor changes in an HTTP resource.     ",
      "enum": "MONITOR",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "monitor-group",
      "definition": "Refers to a resource that can be used to monitor changes in a specified group of HTTP resources.     ",
      "display": "Refers to a resource that can be used to monitor changes in a specified group of HTTP resources.     ",
      "enum": "MONITOR_GROUP",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "next",
      "definition": "Indicates that the link\\'s context is a part of a series, and       that the next in the series is the link target.     ",
      "display": "Indicates that the link\\'s context is a part of a series, and       that the next in the series is the link target.     ",
      "enum": "NEXT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "next-archive",
      "definition": "Refers to the immediately following archive resource.",
      "display": "Refers to the immediately following archive resource.",
      "enum": "NEXT_ARCHIVE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "nofollow",
      "definition": "Indicates that the context\\'s original author or publisher does not endorse the link target.",
      "display": "Indicates that the context\\'s original author or publisher does not endorse the link target.",
      "enum": "NOFOLLOW",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "noopener",
      "definition": "Indicates that any newly created top-level browsing context which results from following the link will not be an auxiliary browsing context.",
      "display": "Indicates that any newly created top-level browsing context which results from following the link will not be an auxiliary browsing context.",
      "enum": "NOOPENER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "noreferrer",
      "definition": "Indicates that no referrer information is to be leaked when following the link.",
      "display": "Indicates that no referrer information is to be leaked when following the link.",
      "enum": "NOREFERRER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "opener",
      "definition": "Indicates that any newly created top-level browsing context which results from following the link will be an auxiliary browsing context.",
      "display": "Indicates that any newly created top-level browsing context which results from following the link will be an auxiliary browsing context.",
      "enum": "OPENER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "openid2.local_id",
      "definition": "Refers to an OpenID Authentication server on which the context relies for an assertion that the end user controls an Identifier.",
      "display": "Refers to an OpenID Authentication server on which the context relies for an assertion that the end user controls an Identifier.",
      "enum": "OPENID_2_LOCAL_ID",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "openid2.provider",
      "definition": "Refers to a resource which accepts OpenID Authentication protocol messages for the context.",
      "display": "Refers to a resource which accepts OpenID Authentication protocol messages for the context.",
      "enum": "OPENID_2_PROVIDER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "original",
      "definition": "The Target IRI points to an Original Resource.",
      "display": "The Target IRI points to an Original Resource.",
      "enum": "ORIGINAL",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "P3Pv1",
      "definition": "Refers to a P3P privacy policy for the context.",
      "display": "Refers to a P3P privacy policy for the context.",
      "enum": "P_3_PV_1",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "payment",
      "definition": "Indicates a resource where payment is accepted.",
      "display": "Indicates a resource where payment is accepted.",
      "enum": "PAYMENT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "pingback",
      "definition": "Gives the address of the pingback resource for the link context.",
      "display": "Gives the address of the pingback resource for the link context.",
      "enum": "PINGBACK",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "preconnect",
      "definition": "Used to indicate an origin that will be used to fetch required        resources for the link context. Initiating an early connection, which        includes the DNS lookup, TCP handshake, and optional TLS negotiation,        allows the user agent to mask the high latency costs of establishing a        connection.",
      "display": "Used to indicate an origin that will be used to fetch required        resources for the link context. Initiating an early connection, which        includes the DNS lookup, TCP handshake, and optional TLS negotiation,        allows the user agent to mask the high latency costs of establishing a        connection.",
      "enum": "PRECONNECT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "predecessor-version",
      "definition": "Points to a resource containing the predecessor       version in the version history.     ",
      "display": "Points to a resource containing the predecessor       version in the version history.     ",
      "enum": "PREDECESSOR_VERSION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "prefetch",
      "definition": "The prefetch link relation type is used to identify a resource        that might be required by the next navigation from the link context, and        that the user agent ought to fetch, such that the user agent can deliver a        faster response once the resource is requested in the future.",
      "display": "The prefetch link relation type is used to identify a resource        that might be required by the next navigation from the link context, and        that the user agent ought to fetch, such that the user agent can deliver a        faster response once the resource is requested in the future.",
      "enum": "PREFETCH",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "preload",
      "definition": "Refers to a resource that should be loaded early in the        processing of the link\\'s context, without blocking rendering.",
      "display": "Refers to a resource that should be loaded early in the        processing of the link\\'s context, without blocking rendering.",
      "enum": "PRELOAD",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "prerender",
      "definition": "Used to identify a resource that might be required by the next        navigation from the link context, and that the user agent ought to fetch        and execute, such that the user agent can deliver a faster response once        the resource is requested in the future.",
      "display": "Used to identify a resource that might be required by the next        navigation from the link context, and that the user agent ought to fetch        and execute, such that the user agent can deliver a faster response once        the resource is requested in the future.",
      "enum": "PRERENDER",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "prev",
      "definition": "Indicates that the link\\'s context is a part of a series, and       that the previous in the series is the link target.     ",
      "display": "Indicates that the link\\'s context is a part of a series, and       that the previous in the series is the link target.     ",
      "enum": "PREV",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "preview",
      "definition": "Refers to a resource that provides a preview of the link\\'s context.",
      "display": "Refers to a resource that provides a preview of the link\\'s context.",
      "enum": "PREVIEW",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "previous",
      "definition": "Refers to the previous resource in an ordered series       of resources.  Synonym for "prev".",
      "display": "Refers to the previous resource in an ordered series       of resources.  Synonym for "prev".",
      "enum": "PREVIOUS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "prev-archive",
      "definition": "Refers to the immediately preceding archive resource.",
      "display": "Refers to the immediately preceding archive resource.",
      "enum": "PREV_ARCHIVE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "privacy-policy",
      "definition": "Refers to a privacy policy associated with the link\\'s context.",
      "display": "Refers to a privacy policy associated with the link\\'s context.",
      "enum": "PRIVACY_POLICY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "profile",
      "definition": "Identifying that a resource representation conforms to a certain profile, without affecting the non-profile semantics of the resource representation.",
      "display": "Identifying that a resource representation conforms to a certain profile, without affecting the non-profile semantics of the resource representation.",
      "enum": "PROFILE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "publication",
      "definition": "Links to a publication manifest. A manifest represents        structured information about a publication, such as informative metadata,        a list of resources, and a default reading order.",
      "display": "Links to a publication manifest. A manifest represents        structured information about a publication, such as informative metadata,        a list of resources, and a default reading order.",
      "enum": "PUBLICATION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "related",
      "definition": "Identifies a related resource.",
      "display": "Identifies a related resource.",
      "enum": "RELATED",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "restconf",
      "definition": "Identifies the root of RESTCONF API as configured on this HTTP server.       The "restconf" relation defines the root of the API defined in RFC8040.       Subsequent revisions of RESTCONF will use alternate relation values to support        protocol versioning.",
      "display": "Identifies the root of RESTCONF API as configured on this HTTP server.       The "restconf" relation defines the root of the API defined in RFC8040.       Subsequent revisions of RESTCONF will use alternate relation values to support        protocol versioning.",
      "enum": "RESTCONF",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "replies",
      "definition": "Identifies a resource that is a reply to the context       of the link.     ",
      "display": "Identifies a resource that is a reply to the context       of the link.     ",
      "enum": "REPLIES",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "ruleinput",
      "definition": "The resource identified by the link target provides an input value to an      instance of a rule, where the resource which represents the rule instance is      identified by the link context.     ",
      "display": "The resource identified by the link target provides an input value to an      instance of a rule, where the resource which represents the rule instance is      identified by the link context.     ",
      "enum": "RULEINPUT",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "search",
      "definition": "Refers to a resource that can be used to search through       the link\\'s context and related resources.",
      "display": "Refers to a resource that can be used to search through       the link\\'s context and related resources.",
      "enum": "SEARCH",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "section",
      "definition": "Refers to a section in a collection of resources.",
      "display": "Refers to a section in a collection of resources.",
      "enum": "SECTION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "self",
      "definition": "Conveys an identifier for the link\\'s context.     ",
      "display": "Conveys an identifier for the link\\'s context.     ",
      "enum": "SELF",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "service",
      "definition": "Indicates a URI that can be used to retrieve a       service document.",
      "display": "Indicates a URI that can be used to retrieve a       service document.",
      "enum": "SERVICE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "service-desc",
      "definition": "Identifies service description for the context that       is primarily intended for consumption by machines.",
      "display": "Identifies service description for the context that       is primarily intended for consumption by machines.",
      "enum": "SERVICE_DESC",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "service-doc",
      "definition": "Identifies service documentation for the context that       is primarily intended for human consumption.",
      "display": "Identifies service documentation for the context that       is primarily intended for human consumption.",
      "enum": "SERVICE_DOC",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "service-meta",
      "definition": "Identifies general metadata for the context that is       primarily intended for consumption by machines.",
      "display": "Identifies general metadata for the context that is       primarily intended for consumption by machines.",
      "enum": "SERVICE_META",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "sponsored",
      "definition": "Refers to a resource that is within a context that is  		sponsored (such as advertising or another compensation agreement).",
      "display": "Refers to a resource that is within a context that is  		sponsored (such as advertising or another compensation agreement).",
      "enum": "SPONSORED",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "start",
      "definition": "Refers to the first resource in a collection of       resources.",
      "display": "Refers to the first resource in a collection of       resources.",
      "enum": "START",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "status",
      "definition": "Identifies a resource that represents the context\\'s       status.",
      "display": "Identifies a resource that represents the context\\'s       status.",
      "enum": "STATUS",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "stylesheet",
      "definition": "Refers to a stylesheet.",
      "display": "Refers to a stylesheet.",
      "enum": "STYLESHEET",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "subsection",
      "definition": "Refers to a resource serving as a subsection in a       collection of resources.",
      "display": "Refers to a resource serving as a subsection in a       collection of resources.",
      "enum": "SUBSECTION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "successor-version",
      "definition": "Points to a resource containing the successor version       in the version history.     ",
      "display": "Points to a resource containing the successor version       in the version history.     ",
      "enum": "SUCCESSOR_VERSION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "sunset",
      "definition": "Identifies a resource that provides information about       the context\\'s retirement policy.     ",
      "display": "Identifies a resource that provides information about       the context\\'s retirement policy.     ",
      "enum": "SUNSET",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "tag",
      "definition": "Gives a tag (identified by the given address) that applies to       the current document.     ",
      "display": "Gives a tag (identified by the given address) that applies to       the current document.     ",
      "enum": "TAG",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "terms-of-service",
      "definition": "Refers to the terms of service associated with the link\\'s context.",
      "display": "Refers to the terms of service associated with the link\\'s context.",
      "enum": "TERMS_OF_SERVICE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "timegate",
      "definition": "The Target IRI points to a TimeGate for an Original Resource.",
      "display": "The Target IRI points to a TimeGate for an Original Resource.",
      "enum": "TIMEGATE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "timemap",
      "definition": "The Target IRI points to a TimeMap for an Original Resource.",
      "display": "The Target IRI points to a TimeMap for an Original Resource.",
      "enum": "TIMEMAP",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "type",
      "definition": "Refers to a resource identifying the abstract semantic type of which the link\\'s context is considered to be an instance.",
      "display": "Refers to a resource identifying the abstract semantic type of which the link\\'s context is considered to be an instance.",
      "enum": "TYPE",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "ugc",
      "definition": "Refers to a resource that is within a context that is User Generated Content.     ",
      "display": "Refers to a resource that is within a context that is User Generated Content.     ",
      "enum": "UGC",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "up",
      "definition": "Refers to a parent document in a hierarchy of       documents.     ",
      "display": "Refers to a parent document in a hierarchy of       documents.     ",
      "enum": "UP",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "version-history",
      "definition": "Points to a resource containing the version history       for the context.     ",
      "display": "Points to a resource containing the version history       for the context.     ",
      "enum": "VERSION_HISTORY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "via",
      "definition": "Identifies a resource that is the source of the       information in the link\\'s context.     ",
      "display": "Identifies a resource that is the source of the       information in the link\\'s context.     ",
      "enum": "VIA",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "webmention",
      "definition": "Identifies a target URI that supports the Webmention protocol.     This allows clients that mention a resource in some form of publishing process     to contact that endpoint and inform it that this resource has been mentioned.",
      "display": "Identifies a target URI that supports the Webmention protocol.     This allows clients that mention a resource in some form of publishing process     to contact that endpoint and inform it that this resource has been mentioned.",
      "enum": "WEBMENTION",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "working-copy",
      "definition": "Points to a working copy for this resource.",
      "display": "Points to a working copy for this resource.",
      "enum": "WORKING_COPY",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
    {
      "code": "working-copy-of",
      "definition": "Points to the versioned resource from which this       working copy was obtained.     ",
      "display": "Points to the versioned resource from which this       working copy was obtained.     ",
      "enum": "WORKING_COPY_OF",
      "name": "IanaLinkRelations",
      "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
    },
  ],
  "description": "Link Relation Types defined at https://www.iana.org/assignments/link-relations/link-relations.xhtml#link-relations-1",
  "name": "IanaLinkRelations",
  "url": "http://hl7.org/fhir/CodeSystem/iana-link-relations",
  "version": "5.0.0",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-identifier-use 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "usual",
      "definition": "The identifier recommended for display and use in real-world interactions.",
      "display": "Usual",
      "enum": "USUAL",
      "name": "IdentifierUse",
      "url": "http://hl7.org/fhir/identifier-use",
    },
    {
      "code": "official",
      "definition": "The identifier considered to be most trusted for the identification of this item. Sometimes also known as "primary" and "main". The determination of "official" is subjective and implementation guides often provide additional guidelines for use.",
      "display": "Official",
      "enum": "OFFICIAL",
      "name": "IdentifierUse",
      "url": "http://hl7.org/fhir/identifier-use",
    },
    {
      "code": "temp",
      "definition": "A temporary identifier.",
      "display": "Temp",
      "enum": "TEMP",
      "name": "IdentifierUse",
      "url": "http://hl7.org/fhir/identifier-use",
    },
    {
      "code": "secondary",
      "definition": "An identifier that was assigned in secondary use - it serves to identify the object in a relative context, but cannot be consistently assigned to the same object again in a different context.",
      "display": "Secondary",
      "enum": "SECONDARY",
      "name": "IdentifierUse",
      "url": "http://hl7.org/fhir/identifier-use",
    },
    {
      "code": "old",
      "definition": "The identifier id no longer considered valid, but may be relevant for search purposes.  E.g. Changes to identifier schemes, account merges, etc.",
      "display": "Old",
      "enum": "OLD",
      "name": "IdentifierUse",
      "url": "http://hl7.org/fhir/identifier-use",
    },
  ],
  "description": "Identifies the purpose for this identifier, if known .",
  "name": "IdentifierUse",
  "url": "http://hl7.org/fhir/identifier-use",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-name-use 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "usual",
      "definition": "Known as/conventional/the one you normally use.",
      "display": "Usual",
      "enum": "USUAL",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
    {
      "code": "official",
      "definition": "The formal name as registered in an official (government) registry, but which name might not be commonly used. May be called "legal name".",
      "display": "Official",
      "enum": "OFFICIAL",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
    {
      "code": "temp",
      "definition": "A temporary name. Name.period can provide more detailed information. This may also be used for temporary names assigned at birth or in emergency situations.",
      "display": "Temp",
      "enum": "TEMP",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
    {
      "code": "nickname",
      "definition": "A name that is used to address the person in an informal manner, but is not part of their formal or usual name.",
      "display": "Nickname",
      "enum": "NICKNAME",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
    {
      "code": "anonymous",
      "definition": "Anonymous assigned name, alias, or pseudonym (used to protect a person\\'s identity for privacy reasons).",
      "display": "Anonymous",
      "enum": "ANONYMOUS",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
    {
      "code": "old",
      "definition": "This name is no longer in use (or was never correct, but retained for records).",
      "display": "Old",
      "enum": "OLD",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
    {
      "code": "maiden",
      "definition": "A name used prior to changing name because of marriage. This name use is for use by applications that collect and store names that were used prior to a marriage. Marriage naming customs vary greatly around the world, and are constantly changing. This term is not gender specific. The use of this term does not imply any particular history for a person\\'s name.",
      "display": "Name changed for Marriage",
      "enum": "MAIDEN",
      "name": "NameUse",
      "url": "http://hl7.org/fhir/name-use",
    },
  ],
  "description": "The use of a human name.",
  "name": "NameUse",
  "url": "http://hl7.org/fhir/name-use",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-narrative-status 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "generated",
      "definition": "The contents of the narrative are entirely generated from the core elements in the content.",
      "display": "Generated",
      "enum": "GENERATED",
      "name": "NarrativeStatus",
      "url": "http://hl7.org/fhir/narrative-status",
    },
    {
      "code": "extensions",
      "definition": "The contents of the narrative are entirely generated from the core elements in the content and some of the content is generated from extensions. The narrative SHALL reflect the impact of all modifier extensions.",
      "display": "Extensions",
      "enum": "EXTENSIONS",
      "name": "NarrativeStatus",
      "url": "http://hl7.org/fhir/narrative-status",
    },
    {
      "code": "additional",
      "definition": "The contents of the narrative may contain additional information not found in the structured data. Note that there is no computable way to determine what the extra information is, other than by human inspection.",
      "display": "Additional",
      "enum": "ADDITIONAL",
      "name": "NarrativeStatus",
      "url": "http://hl7.org/fhir/narrative-status",
    },
    {
      "code": "empty",
      "definition": "The contents of the narrative are some equivalent of "No human-readable text provided in this case".",
      "display": "Empty",
      "enum": "EMPTY",
      "name": "NarrativeStatus",
      "url": "http://hl7.org/fhir/narrative-status",
    },
  ],
  "description": "The status of a resource narrative.",
  "name": "NarrativeStatus",
  "url": "http://hl7.org/fhir/narrative-status",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-quantity-comparator 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "<",
      "definition": "The actual value is less than the given value.",
      "display": "Less than",
      "enum": "LESS_THAN",
      "name": "QuantityComparator",
      "url": "http://hl7.org/fhir/quantity-comparator",
    },
    {
      "code": "<=",
      "definition": "The actual value is less than or equal to the given value.",
      "display": "Less or Equal to",
      "enum": "LESS_THAN_OR_EQUAL_TO",
      "name": "QuantityComparator",
      "url": "http://hl7.org/fhir/quantity-comparator",
    },
    {
      "code": ">=",
      "definition": "The actual value is greater than or equal to the given value.",
      "display": "Greater or Equal to",
      "enum": "GREATER_THAN_OR_EQUAL_TO",
      "name": "QuantityComparator",
      "url": "http://hl7.org/fhir/quantity-comparator",
    },
    {
      "code": ">",
      "definition": "The actual value is greater than the given value.",
      "display": "Greater than",
      "enum": "GREATER_THAN",
      "name": "QuantityComparator",
      "url": "http://hl7.org/fhir/quantity-comparator",
    },
  ],
  "description": "How the Quantity should be understood and represented.",
  "name": "QuantityComparator",
  "url": "http://hl7.org/fhir/quantity-comparator",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-search-entry-mode 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "match",
      "definition": "This resource matched the search specification.",
      "display": "Match",
      "enum": "MATCH",
      "name": "SearchEntryMode",
      "url": "http://hl7.org/fhir/search-entry-mode",
    },
    {
      "code": "include",
      "definition": "This resource is returned because it is referred to from another resource in the search set.",
      "display": "Include",
      "enum": "INCLUDE",
      "name": "SearchEntryMode",
      "url": "http://hl7.org/fhir/search-entry-mode",
    },
    {
      "code": "outcome",
      "definition": "An OperationOutcome that provides additional information about the processing of a search.",
      "display": "Outcome",
      "enum": "OUTCOME",
      "name": "SearchEntryMode",
      "url": "http://hl7.org/fhir/search-entry-mode",
    },
  ],
  "description": "Why an entry is in the result set - whether it\\'s included as a match or because of an _include requirement, or to convey information or warning information about the search process.",
  "name": "SearchEntryMode",
  "url": "http://hl7.org/fhir/search-entry-mode",
  "version": "4.0.1",
}
`;

exports[`src/generator-lib/templates/fhir-codesystem-enum-hbs getCsHbsProperties should return the correct HbsCodeSystem properties for CodeSystem-trigger-type 1`] = `
{
  "caseSensitive": true,
  "concept": [
    {
      "code": "named-event",
      "definition": "The trigger occurs in response to a specific named event, and no other information about the trigger is specified. Named events are completely pre-coordinated, and the formal semantics of the trigger are not provided.",
      "display": "Named Event",
      "enum": "NAMED_EVENT",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "periodic",
      "definition": "The trigger occurs at a specific time or periodically as described by a timing or schedule. A periodic event cannot have any data elements, but may have a name assigned as a shorthand for the event.",
      "display": "Periodic",
      "enum": "PERIODIC",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "data-changed",
      "definition": "The trigger occurs whenever data of a particular type is changed in any way, either added, modified, or removed.",
      "display": "Data Changed",
      "enum": "DATA_CHANGED",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "data-added",
      "definition": "The trigger occurs whenever data of a particular type is added.",
      "display": "Data Added",
      "enum": "DATA_ADDED",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "data-modified",
      "definition": "The trigger occurs whenever data of a particular type is modified.",
      "display": "Data Updated",
      "enum": "DATA_MODIFIED",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "data-removed",
      "definition": "The trigger occurs whenever data of a particular type is removed.",
      "display": "Data Removed",
      "enum": "DATA_REMOVED",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "data-accessed",
      "definition": "The trigger occurs whenever data of a particular type is accessed.",
      "display": "Data Accessed",
      "enum": "DATA_ACCESSED",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
    {
      "code": "data-access-ended",
      "definition": "The trigger occurs whenever access to data of a particular type is completed.",
      "display": "Data Access Ended",
      "enum": "DATA_ACCESS_ENDED",
      "name": "TriggerType",
      "url": "http://hl7.org/fhir/trigger-type",
    },
  ],
  "description": "The type of trigger.",
  "name": "TriggerType",
  "url": "http://hl7.org/fhir/trigger-type",
  "version": "4.0.1",
}
`;
